--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -799,9 +760,9 @@ body {
   -ms-flex-pack: center;
   justify-content: center;
   margin-right: 12px;
-  grid-row: 1;
+  -ms-grid-row: 1;
   -ms-grid-row-span: 2;
-  grid-column: 1;
+  -ms-grid-column: 1;
   grid-area: image;
 }
 
@@ -813,8 +774,8 @@ body {
 }
 
 .track-play__author {
-  grid-row: 1;
-  grid-column: 2;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: author;
   min-width: 49px;
 }
@@ -829,8 +790,8 @@ body {
 }
 
 .track-play__album {
-  grid-row: 2;
-  grid-column: 2;
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
   grid-area: album;
   min-width: 49px;
 }
