--- a/src/index.css
+++ b/src/index.css
@@ -854,7 +854,7 @@ body {
   align-items: center;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .volume__image {
