--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@
 a,
 a:visited {
   text-decoration: none;
-  font-family: 'StratosSkyeng', sans-serif;
+  font-family: "StratosSkyeng", sans-serif;
   cursor: pointer;
 }
 
@@ -28,12 +28,10 @@ ul li {
 }
 
 @font-face {
-  font-family: 'StratosSkyeng';
-  src:
-    local('StratosSkyeng'),
-    local('StratosSkyeng'),
-    url('../public/fonts/StratosSkyeng.woff2') format('woff2'),
-    url('../public/fonts/StratosSkyeng.woff') format('woff');
+  font-family: "StratosSkyeng";
+  src: local("StratosSkyeng"), local("StratosSkyeng"),
+    url("../public/fonts/StratosSkyeng.woff2") format("woff2"),
+    url("../public//fonts/StratosSkyeng.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -42,7 +40,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: 'StratosSkyeng', sans-serif;
+  font-family: "StratosSkyeng", sans-serif;
   color: #ffffff;
 }
 
@@ -742,7 +740,7 @@ body {
   display: grid;
   -ms-grid-columns: auto 1fr;
   grid-template-columns: auto 1fr;
-  grid-template-areas: 'image author' 'image album';
+  grid-template-areas: "image author" "image album";
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -856,7 +854,7 @@ body {
   align-items: center;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: flex-end;
+  justify-content: end;
 }
 
 .volume__image {
