--- a/src/index.css
+++ b/src/index.css
@@ -254,6 +254,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
+  outline: none;
 }
 
 .search__text::-webkit-input-placeholder {
