--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,12 @@ body {
   margin-bottom: 51px;
 }
 
+.centerblock__filter_item {
+  position: relative;
+  display: flex;
+  gap: 10px;
+}
+
 .centerblock__filter_item_text {
   position: absolute;
   box-sizing: border-box;
@@ -428,7 +434,7 @@ input[type=range]::-moz-range-thumb {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .playlist-title__col {
@@ -484,6 +490,7 @@ input[type=range]::-moz-range-thumb {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  
 }
 
 .track__title {
